[package]
name = "disjoint-sets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defaults = "0.2.0"
rstest = "0.11.0"
rand = "0.8.4"
itertools = "0.10.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "speedtest"
harness = false