[package]
name = "percolations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disjoint-sets = { path = "../../disjoint-sets" }
ndarray = "0.15.3"
itertools = "0.10.1"
rand = "0.8.4"
clap = "3.0.0-beta.4"
indicatif = "0.16.0"
gif = "0.11.2"