[package]
name = "percolations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algo_toolbox = { path = "../rust_algo_toolbox" }
ndarray = "0.16.1"
itertools = "0.13.0"
rand = "0.8.4"
clap = {version = "4.5", features = ["derive"]}
indicatif = "0.17.8"
gif = "0.13.1"
