[package]
name = "algo_toolbox"
version = "0.1.0"
edition = "2021"

[[bench]]
harness = false
name = "speedtest"

[dependencies]
derivative = "2.2.0"
itertools = "0.12.1"
tap = "1.0.1"

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.5.0"
rand = "0.8.5"
rstest = "0.23.0"
spectral = "0.6.0"
criterion = "0.5.1"
